Bug 168344 - amarok 2 does not save diabled tabs
Summary: amarok 2 does not save diabled tabs
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0-SVN
Platform: unspecified Linux
: NOR minor
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-08-04 16:31 UTC by Dustin Steiner
Modified: 2009-12-09 11:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dustin Steiner 2008-08-04 16:31:15 UTC
Version:           1.86 (using 4.1.00 (KDE 4.1.0), 4.1.0-2.fc9 Fedora)
Compiler:          gcc
OS:                Linux (i686) release 2.6.25.11-97.fc9.i686

Amarok 2 does not save if I disable the internet-tab on the left. After a restart all tabs are visible.
Also if I haven minimized the lef-tabview, it is shown on every restart of amarok.
Comment 1 Lydia Pintscher 2008-08-04 16:36:35 UTC
I can confirm this here with current svn.
Comment 2 Lydia Pintscher 2008-09-02 21:35:30 UTC
Mark: Does your commit 856371 fix this?
Comment 3 Mark Kretschmann 2008-09-02 21:49:58 UTC
Nope, but I'm also working on implementing that.
Comment 4 Mark Kretschmann 2008-09-03 10:16:15 UTC
Fixed with SVN r856543.