Remember what browsers were visible over sessions.

BUG: 168344

svn path=/trunk/extragear/multimedia/amarok/; revision=856543