src/widgets/SidebarWidget.h
@@ -36,7 +36,7 @@ class SideBarWidget: public KVBox
         SideBarWidget( QWidget *parent );
         virtual ~SideBarWidget();
 
-        /* Restores visibility state of browsers from last session */
+        /* Restores visible/invisible and active/inactive state of browsers from last session */
         void restoreSession();
 
         int addSideBar( const QIcon &icon, const QString &text );
